fixed <aside> any weather from overlaping on form. completed version 1.3

--- a/styles/scss/_main-blog.scss
+++ b/styles/scss/_main-blog.scss
@@ -121,6 +121,10 @@ aside{
     .blog-main .main-content{
         top: -100px;
     }
+
+    aside{
+        top: -100px
+    }
 }
 
 // media query width 1040px and above
